<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarDetailsActivity">

    <ImageView
        android:id="@+id/carImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/vehicule_photo"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/carTitleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/carTitleTextView"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carImageView" />

    <TextView
        android:id="@+id/carPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carTitleTextView" />

    <TextView
        android:id="@+id/carVehicleInfoLabel"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/vehicule_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carMileageTextView" />

    <TextView
        android:id="@+id/carMileageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/carPriceTextView"
        app:layout_constraintTop_toBottomOf="@+id/carTitleTextView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/callDealerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carVehicleInfoLabel">

        <!-- Divide the constraintLayout into two equal parts -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/carLocationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/carLocationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/horizontal_middle"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/carExteriorColorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exterior_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/carLocationLabel" />

        <TextView
            android:id="@+id/carExteriorColorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/horizontal_middle"
            app:layout_constraintTop_toBottomOf="@id/carLocationTextView" />

        <TextView
            android:id="@+id/carInteriorColorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interior_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/carExteriorColorLabel" />

        <TextView
            android:id="@+id/carInteriorColorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/horizontal_middle"
            app:layout_constraintTop_toBottomOf="@id/carExteriorColorTextView" />

        <TextView
            android:id="@+id/carDriveTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drive_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/carInteriorColorLabel" />

        <TextView
            android:id="@+id/carDriveTypeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/horizontal_middle"
            app:layout_constraintTop_toBottomOf="@id/carInteriorColorTextView" />

        <TextView
            android:id="@+id/carTransmissionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transmission"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/carDriveTypeLabel" />

        <TextView
            android:id="@+id/carTransmissionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/horizontal_middle"
            app:layout_constraintTop_toBottomOf="@id/carDriveTypeTextView" />

        <TextView
            android:id="@+id/carBodyStyleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body_style"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/carTransmissionLabel" />

        <TextView
            android:id="@+id/carBodyStyleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/horizontal_middle"
            app:layout_constraintTop_toBottomOf="@id/carTransmissionTextView" />

        <TextView
            android:id="@+id/carEngineLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/engine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/carBodyStyleLabel" />

        <TextView
            android:id="@+id/carEngineTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/horizontal_middle"
            app:layout_constraintTop_toBottomOf="@id/carBodyStyleTextView" />

        <TextView
            android:id="@+id/carFuelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/carEngineLabel" />

        <TextView
            android:id="@+id/carFuelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/horizontal_middle"
            app:layout_constraintTop_toBottomOf="@id/carEngineTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/callDealerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/call_dealer"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>