<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="3dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/carImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                android:contentDescription="@string/vehicule_photo"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/carTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carImageView"
                tools:text="@string/mock_text" />

            <TextView
                android:id="@+id/carPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/carTitleTextView"
                app:layout_constraintTop_toBottomOf="@+id/carTitleTextView"
                tools:text="@string/mock_text" />

            <ImageView
                android:id="@+id/verticalDivider"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/dGray"
                android:contentDescription="@string/vertical_divider"
                app:layout_constraintBottom_toBottomOf="@id/carPriceTextView"
                app:layout_constraintEnd_toStartOf="@id/carMileageTextView"
                app:layout_constraintStart_toEndOf="@id/carPriceTextView"
                app:layout_constraintTop_toTopOf="@id/carPriceTextView" />

            <TextView
                android:id="@+id/carMileageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="152dp"
                android:layout_marginRight="152dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carTitleTextView"
                tools:text="@string/mock_text" />

            <TextView
                android:id="@+id/carLocationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/carPriceTextView"
                app:layout_constraintTop_toBottomOf="@+id/carPriceTextView"
                tools:text="@string/mock_text" />

            <ImageView
                android:id="@+id/horizontal_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/dGray"
                android:layout_margin="8dp"
                android:contentDescription="@string/horizontal_divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/carLocationTextView"
                />

            <Button
                android:id="@+id/callDealerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/call_dealer"
                style="@style/ButtonStyle"
                app:layout_constraintTop_toBottomOf="@+id/horizontal_divider"
                app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>